# model-integrity-checker

./: README.md  pyproject.toml
src/model_integrity_checker/: __init__.py  cli.py
tests/: test_cli.py  test_main.py
